fix(multiplatform): Fix buttons and align across buttons
> I agree, the centered button and text look better.
> I'd also ask for the following minor changes:
> - For mobile screens, use M-sized buttons everywhere (Hero section, Choose what to share, Try KMP)
> - For Mobile S screen, use stretchable buttons

# Conflicts:
#	blocks/multiplatform/choose-share/blocks/what/card.tsx
#	blocks/multiplatform/cta-block/cta-block.tsx
#	blocks/multiplatform/hero/index.tsx

--- a/blocks/multiplatform/cta-block/cta-block.module.css
+++ b/blocks/multiplatform/cta-block/cta-block.module.css
@@ -85,3 +85,9 @@
     left: -535px;
   }
 }
+
+.button {
+  @media (--ktl-ms-in) {
+    width: 100%;
+  }
+}
